Made a small change to the menu slide for the margin on the bottom of the menu carousel.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
           <ul class="nav navbar-nav pull-right">
             <li class="active"><a href="#about_us">About Us</a></li>
             <li><a href="#menu">Menu</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Testimonials</a></li>
+            <li><a href="#gallery">Gallery</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
